      displayed by \code{win.version()}.  (Reported by Gabor
      Grothendieck.)

      \item The custom Windows installer target \code{myR} in the
      installer \file{Makefile} did not work in 2.15.2.  (Reported
      by Erich Neuwirth.)

      \item \code{aperm(matrix(1:6, 2, dimnames=list(A={}, B={})), "A")}
      no longer segfaults.
      
      \item Expressions involving user defined operators were not 
      always deparsed faithfully. (\PR{15179})
      
      \item The \code{enc2utf8()} function converted \code{NA_character_}
      to \code{"NA"} in non-UTF-8 locales. (\PR{15201})
      
      \item The \code{exclude} argument to \code{xtabs()} was ignored
      for \code{"factor"} arguments.

      \item On Windows, work around an event-timing problem when
      the RGui console was closed from the \sQuote{X} control and the closure
      cancelled. (This would on some 64-bit systems crash \R, typically
      those with a slow GPU relative to the CPU.)
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.15.2}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The \code{X11()} window gains an icon: the
      latter may be especially useful on Ubuntu's \sQuote{Unity}
      interface.

      The \code{WM_CLASS} should be set in circumstances where the
      Window Manager failed to make use of X11 resource settings.

      (Contributed by Philip Johnson.)

      \item The \code{"Date"} and \code{"POSIXt"} methods for
      \code{cut()} will accept an unsorted \code{breaks} argument (as
      the default method does, although this was undocumented).
      (Wish of \PR{14961}.)

      \item Reference class methods (in the \pkg{methods} package) that
      use other methods in an indirect way (e.g., by \code{sapply()})
      must tell the code analysis to include that method.  They can now
      do so by invoking \code{$usingMethods()}. %$

      \item More Polish translations are available: for the